--- a/template/element/navigation.html.twig
+++ b/template/element/navigation.html.twig
@@ -1,38 +1,24 @@
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
+        <a class="navbar-brand" href="#">Webgame</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+            </ul>
 
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-                <strong>Webgame</strong>
-            </a>
-
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Registrieren</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Anmelden</a>
+                </li>
+            </ul>
         </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item">
-                    Home
-                </a>
-            </div>
-
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="buttons">
-                        <a class="button is-primary">
-                            <strong>Registrieren</strong>
-                        </a>
-                        <a class="button is-light">
-                            Anmelden
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 </nav>
