--- a/template/page/home.html.twig
+++ b/template/page/home.html.twig
@@ -6,6 +6,28 @@
 {% endblock %}
 {% block content %}
 
+    <div class="container mt-5 mb-5">
 
+        <h1 class="text-center"><b>Spielen</b></h1>
+        <div class="row mt-4">
+
+            <div class="col-4"></div>
+
+            <div class="col-2 text-center">
+
+                <a href="#" class="btn btn-primary">Registrieren</a>
+
+            </div>
+            <div class="col-2 text-center">
+
+                <a href="#" class="btn btn-secondary">Anmelden</a>
+
+            </div>
+
+            <div class="col-4"></div>
+
+        </div>
+
+    </div>
 
 {% endblock %}
