--- a/template/page/login.html.twig
+++ b/template/page/login.html.twig
@@ -8,22 +8,28 @@
 
     <div class="container mt-5 mb-5">
 
+        {% for message in messages %}
+
+            {% include 'element/message.html.twig' with message %}
+
+        {% endfor %}
+
         <div class="row">
 
             <div class="col-4"></div>
 
             <div class="col-4">
 
-                <form>
+                <form method="post">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">E-Mail Adresse</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label for="loginEmail" class="form-label">E-Mail Adresse</label>
+                        <input type="email" class="form-control" id="loginEmail" name="loginEmail">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Passwort</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                        <label for="loginPassword" class="form-label">Passwort</label>
+                        <input type="password" class="form-control" id="loginPassword" name="loginPassword">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Anmelden</button>
                 </form>
 
             </div>
