--- a/template/element/navigation.html.twig
+++ b/template/element/navigation.html.twig
@@ -7,16 +7,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/">Home</a>
                 </li>
             </ul>
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Registrieren</a>
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/register">Registrieren</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Anmelden</a>
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/login">Anmelden</a>
                 </li>
             </ul>
         </div>
