--- a/template/element/navigation.html.twig
+++ b/template/element/navigation.html.twig
@@ -11,14 +11,26 @@
                 </li>
             </ul>
 
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/register">Registrieren</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/login">Anmelden</a>
-                </li>
-            </ul>
+            {% if login_id > 0 %}
+
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/"></a>
+                    </li>
+                </ul>
+
+            {% else %}
+
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/register">Registrieren</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/login">Anmelden</a>
+                    </li>
+                </ul>
+
+            {% endif %}
         </div>
     </div>
 </nav>
