--- a/template/element/navigation.html.twig
+++ b/template/element/navigation.html.twig
@@ -9,6 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/">Ankündigungen</a>
+                </li>
             </ul>
 
             {% if login_id > 0 %}
