--- a/template/element/navigation.login.html.twig
+++ b/template/element/navigation.login.html.twig
@@ -9,14 +9,21 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/">Ankündigungen</a>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Münzen: {{ coins }}</a>
+                    <a class="nav-link text-warning" aria-current="page" href="#">Münzen: {{ coins|default('0') }}</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Diamanten: {{ diamond }}</a>
+                    <a class="nav-link text-info" aria-current="page" href="#">Diamanten: {{ diamond|default('0') }}</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ app.request.getBaseURL() }}/logout">Abmelden</a>
                 </li>
             </ul>
         </div>
