--- a/template/page/gameboard.html.twig
+++ b/template/page/gameboard.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "base.login.html.twig" %}
 
 {% block title %}Start{% endblock %}
 {% block head %}
@@ -6,10 +6,6 @@
 {% endblock %}
 {% block content %}
 
-    <div class="container mt-5 mb-5">
 
-
-
-    </div>
 
 {% endblock %}
