--- a/template/element/footer.html.twig
+++ b/template/element/footer.html.twig
@@ -1,35 +1,6 @@
-<div class="container">
-
-    <hr>
-
-    <div class="row">
-
-        <div class="col-2 text-center">
-
-            <a href="#" class="text-dark">Impressum</a>
-
-        </div>
-        <div class="col-2 text-center">
-
-            <a href="#" class="text-dark">Datenschutz</a>
-
-        </div>
-        <div class="col-4 text-center">
-
-            Webgame oder so
-
-        </div>
-        <div class="col-2 text-center">
-
-            <a href="#" class="text-dark">Guides</a>
-
-        </div>
-        <div class="col-2 text-center">
-
-            <a href="#" class="text-dark">Regeln</a>
-
-        </div>
+<footer class="main-footer">
+    <div class="float-right d-none d-sm-inline">
 
     </div>
-
-</div>
+    <strong>Copyright &copy; 2022 <a href="https://adminlte.io">npcore.net</a>.</strong> All rights reserved.
+</footer>
