--- a/template/page/login.html.twig
+++ b/template/page/login.html.twig
@@ -18,20 +18,42 @@
 
             <div class="col-4"></div>
 
-            <div class="col-4">
-
-                <form method="post">
-                    <div class="mb-3">
-                        <label for="loginEmail" class="form-label">E-Mail Adresse</label>
-                        <input type="email" class="form-control" id="loginEmail" name="loginEmail">
+            <div class="login-box">
+                <div class="card card-outline card-orange">
+                    <div class="card-header text-center">
+                        <a href="{{ app.request.getBaseURL() }}/" class="h1"><b>Web</b>Game</a>
                     </div>
-                    <div class="mb-3">
-                        <label for="loginPassword" class="form-label">Passwort</label>
-                        <input type="password" class="form-control" id="loginPassword" name="loginPassword">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Anmelden</button>
-                </form>
+                    <div class="card-body">
+                        <p class="login-box-msg">Anmelden um loszulegen</p>
 
+                        <form action="" method="post">
+                            <div class="input-group mb-3">
+                                <input type="email" class="form-control" name="loginEmail" placeholder="Email">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-envelope"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="password" class="form-control" name="loginPassword" placeholder="Password">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <span class="fas fa-lock"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-8">
+                                    <a href="{{ app.request.getBaseURL() }}/register" class="text-center">Registrieren</a>
+                                </div>
+                                <div class="col-4">
+                                    <button type="submit" class="btn btn-primary btn-block">Anmelden</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
 
             <div class="col-4"></div>
