--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -19,22 +19,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
         {% include 'element/navigation.html.twig' %}
 
         <div class="content-wrapper">
-                <div class="content-header">
-                        <div class="container">
-                                <div class="row mb-2">
 
-                                </div>
-                        </div>
+                {% block content %}
+
+                {% endblock %}
+
                 </div>
-
-                <div class="content">
-                        <div class="container">
-                                <div class="row">
-
-                                </div>
-                        </div>
-                </div>
-        </div>
         <aside class="control-sidebar control-sidebar-dark">
         </aside>
 
@@ -44,6 +34,5 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script src="{{ app.request.getBaseURL() }}/plugins/jquery/jquery.min.js"></script>
 <script src="{{ app.request.getBaseURL() }}/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="{{ app.request.getBaseURL() }}/js/adminlte.min.js"></script>
-<script src="{{ app.request.getBaseURL() }}/js/demo.js"></script>
 </body>
 </html>
