--- a/template/base.login.html.twig
+++ b/template/base.login.html.twig
@@ -15,43 +15,11 @@
     {% include 'element/navigation.login.html.twig' %}
 
     <div class="content-wrapper">
-        <div class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1 class="m-0">Starter Page</h1>
-                    </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Starter Page</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="card card-orange card-outline">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+        {% block content %}
 
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up the bulk of the card's
-                                    content.
-                                </p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
-                            </div>
-                        </div>
-                    </div>
+        {% endblock %}
 
-                </div>
-            </div>
-        </div>
     </div>
 
     <aside class="control-sidebar control-sidebar-dark">
