--- a/template/page/gameboard.html.twig
+++ b/template/page/gameboard.html.twig
@@ -6,6 +6,19 @@
 {% endblock %}
 {% block content %}
 
-
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0">Start</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Start</a></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
