Add some non-functional sidebar buttons as well as Models for Items

--- a/template/base.login.html.twig
+++ b/template/base.login.html.twig
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ app.request.getBaseURL() }}/plugins/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="{{ app.request.getBaseURL() }}/css/adminlte.min.css">
 </head>
-<body class="hold-transition sidebar-mini dark-mode accent-orange">
+<body class="hold-transition sidebar-mini dark-mode accent-orange layout-fixed">
 <div class="wrapper">
 
     {% include 'element/navigation.login.html.twig' %}
