--- a/template/page/gameboard.html.twig
+++ b/template/page/gameboard.html.twig
@@ -14,7 +14,8 @@
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Start</a></li>
+                        <li class="breadcrumb-item"><a href="#">Game</a></li>
+                        <li class="breadcrumb-item">Gameboard</li>
                     </ol>
                 </div>
             </div>
