--- a/template/element/navigation.login.html.twig
+++ b/template/element/navigation.login.html.twig
@@ -70,7 +70,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ app.request.getBaseURL() }}/" class="nav-link">
+                    <a href="{{ app.request.getBaseURL() }}/inventory" class="nav-link">
                         <i class="nav-icon fas fa-boxes"></i>
                         <p>
                             Lager
@@ -95,6 +95,14 @@
                 </li>
 
                 <li class="nav-header">MULTIPLAYER</li>
+                <li class="nav-item">
+                    <a href="{{ app.request.getBaseURL() }}/" class="nav-link">
+                        <i class="nav-icon fas fa-dollar-sign"></i>
+                        <p>
+                            Marktplatz
+                        </p>
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a href="{{ app.request.getBaseURL() }}/" class="nav-link">
                         <i class="nav-icon fas fa-users"></i>
@@ -196,6 +204,25 @@
                             </p>
                         </a>
                     </li>
+                    {% if userPermLevel == 1 %}
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-code"></i>
+                                <p>
+                                    Development Tools
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link disabled">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Item Adder</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% endif %}
                 {% endif %}
             </ul>
         </nav>
