--- a/template/page/area.html.twig
+++ b/template/page/area.html.twig
@@ -30,8 +30,48 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card card-orange card-outline">
 
+                    <div class="card-header">
+                        <b>Statistiken</b>
+                    </div>
+
+                    <div class="card-body">
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Level: <span class="badge badge-primary badge-pill bg-orange float-right">1</span>
+                            </li>
+                            <li class="list-group-item">
+                                Status: <span class="badge badge-success badge-pill float-right">Bereit</span>
+                            </li>
+                            <li class="list-group-item">
+                                Erfahrungsfortschritt:
+                                Status: <span class="badge badge-success badge-pill bg-orange float-right">0 / 100XP</span>
+                                <div class="progress rounded mt-2">
+                                    <div class="progress-bar bg-orange progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card card-orange card-outline">
+
+                    <div class="card-header">
+                        <b>Auftrag beginnen</b>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
 
 
