--- a/template/element/areaCard.html.twig
+++ b/template/element/areaCard.html.twig
@@ -23,10 +23,10 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-4"></div>
-                <div class="col-4 text-center"><a href="#" class="{{ area.additionalButtonClass }}">
+                <div class="col-4 text-center"><a href="{{ app.request.getBaseURL() }}/area/{{ area.id }}/{{ area.buttonClaim }}" class="{{ area.additionalButtonClass }}">
                         {{ area.buttonText }}
                     </a></div>
-                <div class="col-4 text-center"><a class="text-info" href="#">Informationen</a></div>
+                <div class="col-4 text-center"></div>
             </div>
         </div>
     </div>
