--- a/template/page/area.html.twig
+++ b/template/page/area.html.twig
@@ -49,10 +49,10 @@
                                 Status: <span class="badge badge-success badge-pill float-right">Bereit</span>
                             </li>
                             <li class="list-group-item">
-                                Erfahrungsfortschritt:
-                                Status: <span class="badge badge-success badge-pill bg-orange float-right">0 / 100XP</span>
+                                Erfahrungsfortschritt: 
+                                <span class="badge badge-success badge-pill bg-orange float-right ml-2">0 / 100XP</span>
                                 <div class="progress rounded mt-2">
-                                    <div class="progress-bar bg-orange progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-gradient-orange progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
 
@@ -65,14 +65,77 @@
             <div class="col-md-8">
                 <div class="card card-orange card-outline">
 
+                    <div class="overlay bg-dark">
+
+                        <div class="text-center">
+
+                            <h4>Es ist Bereits ein Auftrag aktiv</h4>
+                            <hr>
+                            Fortschritt: <strong>25%</strong>
+
+                        </div>
+
+                    </div>
+
                     <div class="card-header">
                         <b>Auftrag beginnen</b>
                     </div>
 
+                    <form method="post">
+                        <div class="card-body">
+
+                            <div class="row">
+
+                                <div class="col-md-4">
+                                    <label for="pickaxe1-amount">Spitzhacken</label>
+                                    <div class="input-group mb-3">
+                                        <input id="pickaxe1-amount" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text bg-gray-light text-white dark-mode">/ 100</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <label for="pickaxe1-amount">Äxte</label>
+                                    <div class="input-group mb-3">
+                                        <input id="pickaxe1-amount" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text bg-gray-light text-white dark-mode">/ 100</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <label for="pickaxe1-amount">Angeln</label>
+                                    <div class="input-group mb-3">
+                                        <input id="pickaxe1-amount" type="text" class="form-control">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text bg-gray-light text-white dark-mode">/ 100</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="card-footer">
+
+                            <div class="row">
+                                <div class="col-4">
+
+                                </div>
+                                <div class="col-4">
+                                    <button type="submit" class="btn btn-primary w-100">Arbeit beginnen</button>
+                                </div>
+                                <div class="col-4">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
 
 {% endblock %}
